<?xml version="1.0" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.jpmml</groupId>
		<artifactId>jpmml-parent</artifactId>
		<version>1.0.13</version>
	</parent>

	<groupId>org.jpmml</groupId>
	<artifactId>jpmml-evaluator-spark</artifactId>
	<version>2.1-SNAPSHOT</version>

	<name>JPMML-Evaluator-Spark</name>
	<description>PMML evaluator library for the Apache Spark cluster computing system (http://spark.apache.org/)</description>
	<url>http://www.jpmml.org</url>

	<licenses>
		<license>
			<name>GNU Affero General Public License (AGPL) version 3.0</name>
			<url>http://www.gnu.org/licenses/agpl-3.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>villu.ruusmann</id>
			<name>Villu Ruusmann</name>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>Josh Mahonin</name>
		</contributor>
	</contributors>

	<scm>
		<connection>scm:git:git@github.com:jpmml/jpmml-evaluator-spark.git</connection>
		<developerConnection>scm:git:git@github.com:jpmml/jpmml-evaluator-spark.git</developerConnection>
		<url>git://github.com/jpmml/jpmml-evaluator-spark.git</url>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/jpmml/jpmml-evaluator-spark/issues</url>
	</issueManagement>

	<properties>
		<java.version>17</java.version>
		<scala.version>2.13.18</scala.version>
		<scala.binary.version>2.13</scala.binary.version>
		<spark.version>[4.0.0, 4.2.0)</spark.version>
		<jpmml-evaluator.version>1.7.7</jpmml-evaluator.version>
		<project.build.outputTimestamp>2026-01-06T18:52:51Z</project.build.outputTimestamp>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.jpmml</groupId>
			<artifactId>pmml-evaluator</artifactId>
			<version>${jpmml-evaluator.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jpmml</groupId>
			<artifactId>pmml-evaluator-metro</artifactId>
			<version>${jpmml-evaluator.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.glassfish.jaxb</groupId>
					<artifactId>jaxb-runtime</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-core_${scala.binary.version}</artifactId>
			<version>${spark.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-mllib_${scala.binary.version}</artifactId>
			<version>${spark.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Matches Spark 4.1.0 -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<version>2.24.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.scalatest</groupId>
			<artifactId>scalatest_${scala.binary.version}</artifactId>
			<version>3.2.19</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>4.9.6</version>
				<configuration>
					<jvmArgs>
						<jvmArg>-Xmx1024m</jvmArg>
					</jvmArgs>
					<release>${java.version}</release>
					<scalaVersion>${scala.version}</scalaVersion>
					<scalaCompatVersion>${scala.binary.version}</scalaCompatVersion>
					<args>
						<arg>-deprecation</arg>
						<arg>-feature</arg>
						<arg>-unchecked</arg>
						<arg>-Xlint</arg>
						<arg>-Ywarn-dead-code</arg>
						<arg>-Ywarn-value-discard</arg>
						<arg>-Ywarn-unused</arg>
						<arg>-Xfatal-warnings</arg>
					</args>
				</configuration>
				<executions>
					<execution>
						<id>scala-compile-first</id>
						<phase>process-resources</phase>
						<goals>
							<goal>add-source</goal>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>scala-test-compile</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>doc-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.scalatest</groupId>
				<artifactId>scalatest-maven-plugin</artifactId>
				<version>2.2.0</version>
				<executions>
					<execution>
						<id>test</id>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<argLine>${jacoco.agent}</argLine>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<finalName>${project.artifactId}-runtime-${project.version}</finalName>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>module-info.class</exclude>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>de.jutzig</groupId>
				<artifactId>github-release-plugin</artifactId>
				<version>1.2.0</version>
				<executions>
					<execution>
						<id>default-cli</id>
						<configuration>
							<artifact>${project.build.directory}/${project.artifactId}-runtime-${project.version}.${project.packaging}</artifact>
							<description>https://github.com/jpmml/jpmml-evaluator-spark</description>
							<releaseName>${project.version}</releaseName>
							<repositoryId>jpmml/jpmml-evaluator-spark</repositoryId>
							<tag>${project.version}</tag>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<activation>
				<jdk>[16, )</jdk>
			</activation>
			
			<build>
				<plugins>
					<plugin>
						<groupId>org.scalatest</groupId>
						<artifactId>scalatest-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>test</id>
								<configuration>
									<argLine>${jacoco.agent} --add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
